Modernize Java syntax to JDK17 level in App Engine code base.
PiperOrigin-RevId: 861206703
Change-Id: If6a63e7bae3d33e833cf752ee8313d88b9dffa86