@@ -31,7 +31,6 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
@@ -100,7 +99,7 @@ public final class GuestBookTest extends JavaRuntimeViaHttpBase {
 
   private static List<String> readOutput(InputStream inputStream) throws IOException {
     try (BufferedReader output = new BufferedReader(new InputStreamReader(inputStream))) {
-      return output.lines().map(l -> l + "\n").collect(Collectors.toList());
+      return output.lines().map(l -> l + "\n").toList();
     }
   }
 
